<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ImageView
        android:id="@+id/mainMenuBackground"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"

        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/title_background"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/custom_toast_border"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/babyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ui_button_baby"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/babyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:focusable="false"
            android:text="@string/baby_description"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/kidsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ui_button_kids"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/kidsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:focusable="false"
            android:text="@string/kids_description"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/adultsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ui_button_adults"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/adultsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:focusable="false"
            android:text="@string/adults_description"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />

    </LinearLayout>
</merge>